--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,16 @@ layout: default
 <div class="post">
     <h1 class="post-title">{{ page.title }}</h1>
     <span class="post-date">{{ page.date | date_to_string }}</span>
+    <div class="tags">
+        {% assign sortedTags = page.tags | sort %}
+        <small>Tags: </small>
+        {% for tag in sortedTags %}
+            <span class="tags">
+                <small> <a href="{{ site.baseurl }}/tag/{{ tag }}">&nbsp;#{{ tag }}</a></small>
+            </span>&nbsp;
+        {% endfor %}
+        <br>
+    </div>
     {{ content }}
 </div>
 
@@ -23,3 +33,6 @@ layout: default
         {% endfor %}
     </ul>
 </div>
+
+
+
