--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
 <div class="page">
-    <h1 class="page-title">{{ page.title }}</h1>
+    <h3 class="page-title">{{ page.title }}</h3>
     {{ content }}
 </div>
+
+<div>
+    <h4>
+        {% for member in site.data.member %}
+            {{ memeber.name }}
+        {% endfor %}
+    </h4>
+</div>
+
