--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>{{ site.description }}</p>
+  <p>{{ site.description }}</p> 
   </div>
 
   <nav class="sidebar-nav">
@@ -20,21 +20,24 @@
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="/MattBlog{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
     {% endfor %}
     
+    <a class="sidebar-nav-item" href="/MattBlog/tag/jekyll">jekyll build tag</a>
+    <a class="sidebar-nav-item" href="/MattBlog/tag/HGCAL">HGCAL build tag</a>
+    <a class="sidebar-nav-item" href="/MattBlog/tag/CSSRecord">CSS Record build tag</a>
     <!--
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     --!>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
+    <a class="sidebar-nav-item" href="https://github.com/{{ site.github_username }}">GitHub</a> 
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: datetime-local }}. All rights reserved.
     </p>
   </div>
 </div>
