--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,18 @@
 
   <body>
 
-    {% include sidebar.html %}
-
+    {% include sidebar.html %} 
+    {% include header.html %}
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
+    
     <div class="wrap">
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
+            <!--  
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
+            <small>{{ site.tagline }}</small> -->
           </h3>
         </div>
       </div>
