--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,11 +15,14 @@ layout: default
         {% endfor %}
         <br>
     </div>
+    <small> Total : {{ page.content | number_of_words }} words </small> <br>
+    <br>
     {{ content }}
 </div>
-
+{% include related-posts.html %}
+<!--
 <div class="related">
-    <h2>Related Posts</h2>
+    <h5>Related Posts</h5>
     <ul class="related-posts">
         {% for post in stite.related_posts limit:3 %}
         <li>
@@ -33,6 +36,4 @@ layout: default
         {% endfor %}
     </ul>
 </div>
-
-
-
+-->
