--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -63,6 +63,13 @@ h1, h2, h3, h4, h5, h6 {
 .wrap {
   position: relative;
   width: 100%;
+  
+  /*position: absolute;
+  top: .8rem;
+  left: 3rem;
+  display: block;
+  padding: .25rem .75rem;*/
+   
 }
 
 
@@ -97,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
-  border-bottom: 1px solid #eee;
+  /*border-bottom: 1px solid #eee; 20190709*/
 }
 .masthead-title {
   margin-top: 0;
@@ -180,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar-nav-item {
   display: block;
   padding: .5rem 1rem;
-  border-top: 1px solid rgba(255,255,255,.1);
+  border-top: 1px solid rgba(255,255,255,0.1);
 }
 .sidebar-nav-item.active,
 a.sidebar-nav-item:hover,
@@ -316,19 +323,28 @@ a.sidebar-nav-item:focus {
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030;
+    /*color: LightGray*/
+    color: Orange;
 }
 .page-title,
 .post-title {
   margin-top: 0;
 }
 
+.page-header {
+    color: #fff;
+    background: #56687C url('../../images/cover.jpg') no-repeat 50%;
+    padding: 3rem;
+    top: 20px;
+    background-size: cover;
+}
 /* Meta data line below post title */
 .post-date {
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  /*color: #9a9a9a;*/
+  color: blue
 }
 
 /* Related posts */
