--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -80,6 +80,8 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .container {
+  position:relative;
+  top:150px;
   max-width: 28rem;
 }
 @media (min-width: 38em) {
@@ -333,9 +335,14 @@ a.sidebar-nav-item:focus {
 
 .page-header {
     color: #fff;
-    background: #56687C /*url('../../images/cover.jpg')*/ url('https://user-images.githubusercontent.com/13759047/60906244-4a3a0580-a2a9-11e9-84e7-574fe38d1fb8.jpg') no-repeat 50%;
-    padding: 3rem;
-    top: 20px;
+    background: url('https://user-images.githubusercontent.com/13759047/60906244-4a3a0580-a2a9-11e9-84e7-574fe38d1fb8.jpg') no-repeat 50%;
+    width: 100%;
+    /*height: 100%;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 2rem;
+    opacity: 1;
     background-size: cover;
 }
 /* Meta data line below post title */
@@ -346,6 +353,30 @@ a.sidebar-nav-item:focus {
   /*color: #9a9a9a;*/
   color: blue
 }
+
+/* Project-name,Header-link */
+.project-name {
+    margin-top: 0;
+    margin-bottom: 0.1rem;
+    text-align: center;
+}
+.header-link {
+    color: rgba(255,255,255,0.9);
+    text-decoration: none;
+    transition: 0.4s;
+    text-align: center;
+}
+.subheader-link {
+    color: rgba(100,200,40,0.9);
+    text-align: center;
+}
+
+.header-link:hover {
+    text-shadow: 0 0 8px rgba(255,255,255,0.7);
+    transition: 0.3s;
+    text-decoration: none;
+}
+
 
 /* Related posts */
 .related {
