--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="page-header">
          
     <h1 class="project-name">
-        <a class="header-link" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a class="header-link" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
         <font size="3">{{ site.tagline }}</font> 
     </h1>
     
-    <h3 class="subheader-link">{% if site.twitter_username %}<a class="subheader-link" href="https://twitter.com/{{ site.twitter_username }}" target_"blank">follow @{{ site.twitter_username }}</a></h3>{% endif %}
+    <h3 class="subheader-link">{% if site.twitter_username %}<a class="subheader-link" href="https://twitter.com/{{ site.twitter_username }}" target_"blank">follow @{{ site.twitter_username }}</a>{% endif %}</h3>
 
 </header>
