--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -355,7 +355,8 @@ a.sidebar-nav-item:focus {
 }
 
 /* Project-name,Header-link */
-.project-name {
+.project-name,
+.project-name, a{
     margin-top: 0;
     margin-bottom: 0.1rem;
     text-align: center;
@@ -364,9 +365,10 @@ a.sidebar-nav-item:focus {
     color: rgba(255,255,255,0.9);
     text-decoration: none;
     transition: 0.4s;
-    text-align: center;
+    /*text-align: center;*/
 }
-.subheader-link {
+.subheader-link,
+.subheader-link a {
     color: rgba(100,200,40,0.9);
     text-align: center;
 }
@@ -375,6 +377,7 @@ a.sidebar-nav-item:focus {
     text-shadow: 0 0 8px rgba(255,255,255,0.7);
     transition: 0.3s;
     text-decoration: none;
+    text-align: center;
 }
 
 
