--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,21 @@
   <body>
 
     {% include sidebar.html %} 
-    {% include header.html %}
+    <!--{% include header.html %}-->
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title">
-            <!--  
+            <!--<h3 class="masthead-title">-->
+            <!-- 
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small> -->
-          </h3>
+            <small>{{ site.tagline }}</small>
+            -->
+
+          {% include header.html %}
+          <!-- </h3> -->
         </div>
       </div>
 
