--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
     
     <a class="sidebar-nav-item" href="/MattBlog/tag/jekyll">jekyll build tag</a>
     <a class="sidebar-nav-item" href="/MattBlog/tag/HGCAL">HGCAL build tag</a>
-    <a class="sidebar-nav-item" href="/MattBlog/tag/CSSRecord">CSS Record build tag</a>
+    <a class="sidebar-nav-item" href="/MattBlog/tag/CSSRecord">CSS/JS Record build tag</a>
     <!--
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     --!>
