--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -61,14 +61,14 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .wrap {
-  position: relative;
+  /*position: relative;
+  width: 100%;*/
+  position: absolute;
   width: 100%;
-  
-  /*position: absolute;
-  top: .8rem;
-  left: 3rem;
+  /*top: .8rem;
+  left: 10rem;*/
   display: block;
-  padding: .25rem .75rem;*/
+  padding: 5.5rem .75rem;
    
 }
 
@@ -80,8 +80,6 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .container {
-  position:relative;
-  top:150px;
   max-width: 28rem;
 }
 @media (min-width: 38em) {
