--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -184,6 +184,9 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar-nav {
   border-bottom: 1px solid rgba(255,255,255,.1);
 }
+.sidebar-nav li {
+    list-style-type:circle;
+}
 .sidebar-nav-item {
   display: block;
   padding: .5rem 1rem;
@@ -202,8 +205,8 @@ a.sidebar-nav-item:focus {
     padding: 1.5rem;
   }
   .sidebar-nav-item {
-    padding-left:  1.5rem;
-    padding-right: 1.5rem;
+    padding-left:  1.0rem;
+    padding-right: 1.0rem;
   }
 }
 
@@ -267,6 +270,47 @@ a.sidebar-nav-item:focus {
     display: none;
   }
 }
+
+/*dropbtn and dropdown*/
+.dropbtn {
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+a.dropbtn:hover/*, a.dropbtn:focus*/{
+    rgba(255,255,255,0.1);
+}
+.dropdown {
+    position:relative;
+    display:none;
+}
+
+.dropdown-content {
+    display:none;
+    position:relative;
+    /*background-color: #f9f9f9;*/
+    /*background-color: rgba(0,0,0,0.2);;*/
+
+    background-color:brown;
+    min-width:150px;
+    overflow:auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdown-content a {
+  /*color: black;*/
+  color: rgba(255,255,255,1);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content li {
+  list-style-type:circle;
+}  
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
 
 /* Slide effect
  *
@@ -364,6 +408,7 @@ a.sidebar-nav-item:focus {
     color: rgba(255,255,255,0.9);
     text-decoration: none;
     transition: 0.4s;
+    /*cursor: pointer;*/
 }
 
 .header-link:hover {
