--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,12 +1,13 @@
+
 <div class="related">
-    <h5>Related Posts</h5>
+    <h3>Related Posts</h3>
     <div class="related-posts"> 
       {% assign firstTag = page.tags | first %}
       {% assign relatedCount = 0 %}
       {% for related in site.tags[firstTag] %}
         {% unless page.permalink == related.permalink %}
         {% assign relatedCount = relatedCount | plus: 1 %}
-        <a href="{{ site.baseurl }}{{related.permalink}}">{{ related.title }}</a><br>
+        <a href="{{ site.baseurl }}/{{related.permalink}}">{{ related.title }}</a><br>
         {% endunless %}
           
         {% if relatedCount == 4 %}
