--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="page">
-    <h3 class="page-title">{{ page.title }}</h3
+    <h3 class="page-title">{{ page.title }}</h3>
     {{ content }}
 </div>
 
