--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,28 @@ layout: default
     <br>
     {{ content }}
 </div>
+
 {% include related-posts.html %}
+
+<!--
+<div class="related">
+    <h5>Related Posts</h5>
+    <div class="related-posts"> 
+      {% assign firstTag = page.tags | first %}
+      {% assign relatedCount = 0 %}
+      {% for related in site.tags[firstTag] %}
+        {% unless page.permalink == related.permalink %}
+        {% assign relatedCount = relatedCount | plus: 1 %}
+        <a href="{{ site.baseurl }}{{related.permalink}}">{{ related.title }}</a><br>
+        {% endunless %}
+          
+        {% if relatedCount == 4 %}
+          {% break %}
+        {% endif %}
+      {% endfor %}
+    </div>
+</div>
+-->
 <!--
 <div class="related">
     <h5>Related Posts</h5>
