--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -47,7 +47,8 @@ html {
 h1, h2, h3, h4, h5, h6 {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: #313131;
+  /**color: #313131;**/
+  color: #aa759f;
   letter-spacing: -.025rem;
 }
 
