--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -90,7 +90,7 @@
         <a id="BtnFrontEnd" class="sidebar-nav-item">Front-End Diary</a>
         <div id="DropdownFrontEnd" class="dropdown-content">
             <li><a class="sidebar-nav-item" href="/MattBlog/tag/jekyll">jekyll build tag</a></li>
-            <li><a class="sidebar-nav-item" href="/MattBlog/tag/CSSRecord">CSS/JS Record build tag</a></li>
+            <li><a class="sidebar-nav-item" href="/MattBlog/tag/CSSRecord">HTML/CSS/JS Record build tag</a></li>
         </div>
     </div>
     
