--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,6 +46,7 @@
           <a id="BtnHGCAL" class="sidebar-nav-item">High Particle Diary</a>
           <div id="DropdownHGCAL" class="dropdown-content">
               <li><a class="sidebar-nav-item" href="/MattBlog/tag/HGCAL">HGCAL</a>
+              <li><a class="sidebar-nav-item" href="/MattBlog/tag/TheoryRecord">TheoryRecord</a>
           </div>
       </div>
     
