--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
-<header class="page-header">
-         
+<header class="page-header"> 
+    <div class="header-position">
     <h1 class="project-name">
-        <a class="header-link" href="{{ site.baseurl }}/" title="Home"> {{ site.title }}</a>
+        <a class="header-link" href="{{ site.baseurl }}/" title="Home" style="font-size:40px"> {{ site.title }}</a>
         <font size="3">{{ site.tagline }}</font> 
     </h1>
-    <h3 class="project-name">{% if site.twitter_username %}<a class="subheader-link" href="https://twitter.com/{{ site.twitter_username }}" target"_blank">follow @{{ site.twitter_username }} twitter</a>{% endif %}</h3>
-    <h3 class="project-name"><a class="subheader-linkwebsite" href="https://jekyllrb.com" target="_blank">follow @{{ site.officialwebsitename }} website</a></h3>    
+    <h3 class="project-name">{% if site.twitter_username %}<a class="subheader-link" href="https://twitter.com/{{ site.twitter_username }}" target="_blank" style="font-size:30px">follow @{{ site.twitter_username }} twitter</a>{% endif %}</h3>
+    <h3 class="project-name"><a class="subheader-linkwebsite" href="https://jekyllrb.com" target="_blank" style="font-size:30px">follow @{{ site.officialwebsitename }} website</a></h3>    
+    </div>
 </header>
